--- a/bizopt/BO/templates/creators.html
+++ b/bizopt/BO/templates/creators.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} {% block content %}
 
 <head>
-
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>BizOpt</title>
     
@@ -157,7 +158,7 @@
         margin: 15px 0 25px 0;
     }
 
-    .social-icons a {
+    .social-icons .roundedSocialBtn {
         position: relative;
         height: 40px;
         width: 40px;
@@ -167,7 +168,7 @@
         border-radius: 50%;
     }
 
-    .social-icons a:hover::before,
+    .social-icons .roundedSocialBtn:hover::before,
     .wrapper .icon:hover::before,
     .buttons button:hover:before {
         content: "";
@@ -508,21 +509,21 @@
 </div>
 
 
-<div id="content" class="row" style="margin-top: 50px; margin-left: 80px">
+<div id="content" class="row">
     {% include "baseProductCard.html" %}
 
 </div>
 <br>
 <br>
 
-
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 <script>
     $(function () {
         var xhr = new XMLHttpRequest()
         xhr.open('GET', 'baseProductCard ')
         xhr.onload = function () {
 
-            console.log(xhr.response)
             $('#content').html(xhr.response)
         }
         xhr.send()
@@ -537,7 +538,6 @@
         xhr.open('GET', 'baseResumeCard')
         xhr.onload = function () {
 
-            console.log(xhr.response)
             $('#content').html(xhr.response)
         }
         xhr.send()
@@ -552,7 +552,6 @@
         xhr.open('GET', 'baseProductCard')
         xhr.onload = function () {
 
-            console.log(xhr.response)
             $('#content').html(xhr.response)
         }
         xhr.send()
