--- a/bizopt/BO/templates/baseResumeCard.html
+++ b/bizopt/BO/templates/baseResumeCard.html
@@ -1,40 +1,4 @@
   {% for creator in creators %}
-  <!-- <div class="wrapper">
-        <div class="img-area">
-          <div class="inner-area">
-            <img src="" alt="">
-          </div>
-        </div>
-
-        <div class="name">{{ creator.first_name }}</div>
-        <div class="about">{{ creator.tag }}</div>
-        <div class="social-icons">
-          <a href="#" class="fb"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="insta"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="yt"><i class="fab fa-youtube"></i></a>
-        </div>
-        <div class="buttons">
-          <a type="button" href="cardResume">Написать</a>
-          <button>Запомнить</button>
-        </div>
-        <div class="social-share">
-          <div class="row">
-            <i class="far fa-heart"></i>
-            <i class="icon-2 fas fa-heart"></i>
-            <span>20.4k</span>
-          </div>
-          <div class="row">
-            <i class="far fa-comment"></i>
-            <i class="icon-2 fas fa-comment"></i>
-            <span>14.3k</span>
-          </div>
-          <div class="row">
-            <i class="fas fa-share"></i>
-            <span>12.8k</span>
-          </div>
-        </div>
-      </div> -->
   <div class="uk-margin-auto uk-padding-remove uk-card uk-card-hover uk-card-body uk-width-1-2@m" href="#">
     <div class=" uk-padding-auto uk-card-header">
       <div class=" uk-padding-auto uk-grid-small uk-flex-middle" uk-grid>
@@ -58,7 +22,7 @@
     </div>
     <div class=" uk-padding-auto uk-card-footer">
       <a href="#" class="uk-margin-right uk-button uk-button-text">Сохранить</a>
-      <a href="#" class="uk-margin-left uk-button uk-button-text">Написать</a>
+      <a href="cardResume" class="uk-margin-left uk-button uk-button-text">Написать</a>
     </div>
   </div>
 
