--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -9,36 +9,31 @@
 <div class="placeOut">
 
 
+        {% for product in products %}
 
-
-
-
-    <!-- DJANGO for start here -->
-
-    {% for task in tasks %}
 
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            
+
                   <div class="d-flex container-fluid flex-row">
-                    
+
                       <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">
-                      
+
                       <h1 style="margin-left: 5%">{{ task.name }}</h1>
-                    
+
                   </div>
-              
+
           </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
           <div class="accordion-body">
 
             <div class="progress">
-             
+
               <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>
-              
+
             </div>
 
 
@@ -53,9 +48,9 @@
                 <div class="price">
                     {{ task.price }} ₽
                 </div>
-                
+
                 <span class="badge rounded-pill bg-success">Оплачено</span>
-                
+
                 <span class="badge rounded-pill bg-danger">Не оплачено</span>
               </dd>
 
@@ -73,8 +68,9 @@
         </div>
       </div>
     </div>
-    {% endfor %}
     <!-- DJANGO for end here -->
+
+    {% endfor %}
 
 </div>
 
