--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -348,6 +348,17 @@
                 <label>Дополнительная информация о товаре</label>
                 <button class="btn btn-outline-secondary" id="btnAddkey" onclick="showExtraInputs()" type="button"><i class="fa fa-arrow-down"></i></button>
                 <br>
+                <!--         IMAGE       -->
+
+                <div class="row mt-3 mb-3">
+                    <div class="col-md-8">
+                        <label class="labels">Загрузить фото</label>
+                                   <input id="fileupload" class="form-control" name="profile_images" type="file" >
+                    </div>
+                </div>
+
+                <!--         IMAGE END      -->
+
 
                 <div id="extraInputs" class="d-none">
                     <label>Размер упаковки <b>(см)</b></label>
