add info button in yourTasks.html create infoTask.html create template7.html

--- a/bizopt/BO/templates/yourTasks.html
+++ b/bizopt/BO/templates/yourTasks.html
@@ -90,7 +90,10 @@
                   <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>
 
                 </dl>
-                <a class="btn btn-primary" href="editTask/{{ card.id }}" role="button">Редактировать</a>
+                <div class="d-grid gap-2 d-md-block">
+                    <a class="btn btn-primary" href="editTask/" role="button">Редактировать</a>
+                    <a class="btn btn-primary" href="infoTask/" role="button">Информация</a>
+                </div>
 
             </div>
         </div>
