--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -48,9 +48,9 @@
                                 </li>
 
                                 <li class="list-group-item">
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                      Показать
-                                    </button>
+<!--                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">-->
+<!--                                      Показать-->
+<!--                                    </button>-->
                                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
@@ -67,11 +67,26 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <form method="post" enctype="multipart/form-data">
-                                        {% csrf_token %}
-                                        <button class="btn btn-dark" type="submit">Нравится</button>
-                                    </form>
-{#                                    <a href="" >Нравится</a>#}
+                                    <div class="d-flex flex-row bd-highlight mb-3">
+                                        <button type="button" class="btn btn-primary" style="margin-right: 5%" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            Показать
+                                        </button>
+                                        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Отправить запрос</button>
+
+
+                                        <form method="post" enctype="multipart/form-data">
+                                            {% csrf_token %}
+                                            <div class="offcanvas offcanvas-top" style="height: 10%; background-color: #25d366"  tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+                                                <div class="offcanvas-header">
+                                                    <h5 id="offcanvasTopLabel" style="margin: auto">Успешно!</h5>
+                                                    <button type="submit" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="liveAlertBtn"></button>
+                                                </div>
+                                                <div class="offcanvas-body">
+                                                </div>
+                                            </div>
+
+                                        </form>
+                                    </div>
                                 </li>
 
                             </ul>
@@ -120,6 +135,22 @@
 </style>
 
 <script>
+
+    var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+    var alertTrigger = document.getElementById('liveAlertBtn')
+
+    function alert(message, type) {
+        var wrapper = document.createElement('div')
+        wrapper.innerHTML = '<div class="alert alert-' + type + ' alert-dismissible" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+
+        alertPlaceholder.append(wrapper)
+    }
+
+    if (alertTrigger) {
+        alertTrigger.addEventListener('click', function () {
+            alert('Nice, you triggered this alert message!', 'success')
+        })
+    }
 </script>
 
 {% endblock %}
