--- a/bizopt/BO/templates/cardResume.html
+++ b/bizopt/BO/templates/cardResume.html
@@ -10,25 +10,30 @@
     <div class="uk-card uk-card-default uk-width-1-3@m">
         <div class="uk-card-header">
             <div class="uk-grid-small uk-flex-middle" uk-grid>
-                <div class="uk-width-auto">
+                <div class="d-flex flex-row bd-highlight mb-3">
                     <img class="uk-border-circle" width="150" height="150" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png">
+                    <div class="d-flex flex-column bd-highlight mb-3" style="margin-left: 10%">
+                        <div class="d-flex flex-row bd-highlight mb-3">
+                            <h3 class="uk-card-title uk-margin-remove-bottom">{{ profile.first_name }}</h3>
+                            <div style="margin-left: 2%"><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span></div>
+                        </div>
+                        <p class="uk-text-meta uk-margin-remove-top uk-text-break">{{ profile.description }}</p>
+                    </div>
                 </div>
-                <div class="uk-width-expand">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">{{ profile.first_name }}
-                    </h3>
-                    <p class="uk-text-meta uk-margin-remove-top">{{ profile.tag }}</p>
-                </div>
-                <button class="uk-button uk-button-primary uk-remove-padding">Редактировать</button>
             </div>
         </div>
-        <div class="uk-card-body">
-            <p class="uk-text-meta uk-margin-remove-top uk-text-break">{{ profile.description }}</p>
+        <div class="uk-card-body" style="padding: 10px">
+            <div class="d-flex flex-column bd-highlight mb-3" style="margin-left: 10%">
+                <h1 class="uk-text-meta uk-margin-remove-top uk-text-break">Компания: да</h1>
+                <p class="uk-text-meta uk-margin-remove-top uk-text-break">О компании: -----------</p>
+            </div>
         </div>
-        <div class="uk-card-footer">
+        <!--<div class="uk-card-footer">
             <p class="uk-text-meta uk-margin-remove-top">{{ profile.company_name }}</p>
-        </div>
+        </div> -->
     </div>
 </div>
+
 
 
 {% for product in products %}
