--- a/bizopt/BO/templates/cardTask.html
+++ b/bizopt/BO/templates/cardTask.html
@@ -7,7 +7,7 @@
    
    
     
-        <header>{{ task.name }} Tags: {{ task.tags.all|join:", " }}</header>
+        <header>{{ task.name }}</header>
         <input type="radio" name="slider" checked id="home">
         <input type="radio" name="slider" id="blog">
         <input type="radio" name="slider" id="code">
@@ -23,24 +23,39 @@
         </nav>
         <section>
           <div class="content content-1">
-            <div class="title">Описание</div>
-            <p>{{ task.description }}</p>
+              <div class="d-flex flex-column bd-highlight mb-3">
+                  <div class="p-2 bd-highlight">
+                      <div style="margin-top: 30px; margin-bottom: 10px">
+                          <div class="title">Id товара: </div>
+                          <p>{{ task.task_id }}</p>
+                      </div>
+                  </div>
+                  <div class="p-2 bd-highlight">
+                      <div class="title">Тэги: </div>
+                      <p>{{ task.tags.all|join:", " }}</p>
+                  </div>
+                  <div class="p-2 bd-highlight">
+                      <div class="title">Цена: </div>
+                      <p>{{ task.price }}</p>
+                  </div>
+              </div>
           </div>
+
           <div class="content content-2">
-            <div class="title">This is a Blog content</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit amet. Possimus doloris nesciunt mollitia culpa sint itaque, vitae praesentium assumenda suscipit fugit doloremque adipisci doloribus, sequi facere itaque cumque accusamus, quam molestias sed provident quibusdam nam deleniti. Autem eaque aut impedit eo nobis quia, eos sequi tempore! Facere ex repellendus, laboriosam perferendise. Enim quis illo harum, exercitationem nam totam fugit omnis natus quam totam, repudiandae dolor laborum! Commodi?</p>
+            <div class="title">Описание:</div>
+              <p>{{ task.description }}</p>
           </div>
           <div class="content content-3">
-            <div class="title">This is a Code content</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, debitis nesciunt! Consectetur officiis, libero nobis dolorem pariatur quisquam temporibus. Labore quaerat neque facere itaque laudantium odit veniam consectetur numquam delectus aspernatur, perferendis repellat illo sequi excepturi quos ipsam aliquid est consequuntur.</p>
+              <div class="title">Время: </div>
+              <p>{{ task.time }}</p>
           </div>
           <div class="content content-4">
-            <div class="title">This is a Help content</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim reprehenderit null itaq, odio repellat asperiores vel voluptatem magnam praesentium, eveniet iure ab facere officiis. Quod sequi vel, rem quam provident soluta nihil, eos. Illo oditu omnis cumque praesentium voluptate maxime voluptatibus facilis nulla ipsam quidem mollitia! Veniam, fuga, possimus. Commodi, fugiat aut ut quorioms stu necessitatibus, cumque laborum rem provident tenetur.</p>
+              <div class="title">Цена: </div>
+              <p>{{ task.price }}</p>
           </div>
           <div class="content content-5">
-            <div class="title">This is a About content</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur officia sequi aliquam. Voluptatem distinctio nemo culpa veritatis nostrum fugit rem adipisci ea ipsam, non veniam ut aspernatur aperiam assumenda quis esse soluta vitae, placeat quasi. Iste dolorum asperiores hic impedit nesciunt atqu, officia magnam commodi iusto aliquid eaque, libero.</p>
+              <div class="title">Id создателя: </div>
+              <p>{{ task.id_creator }}</p>
           </div>
         </section>
 
