--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -284,7 +284,7 @@
                 <label>Комплект товара</label>
                 <div class="input-group mt-2 mb-2">
                     <input type="text" id="inputvalue" class="form-control">
-                    <button class="btn btn-outline-secondary" id="btnAdd" onclick="addInput(this)" type="button"><i class="fa fa-plus"></i></button>
+                    <button class="btn btn-outline-secondary" id="btnAdd" name="addComplect" onclick="addInput(this)" type="button"><i class="fa fa-plus"></i></button>
                     <br>
                 </div>
                 <!-- template start -->
@@ -339,7 +339,7 @@
                 <label>Ключевые слова</label>
                 <div class="input-group mt-2 mb-2">
                     <input type="text" id="keyValue" class="form-control">
-                    <button class="btn btn-outline-secondary" id="btnAddkey" onclick="addKey(this)" type="button"><i class="fa fa-plus"></i></button>
+                    <button class="btn btn-outline-secondary" id="btnAddkey" name="addKey" onclick="addKey(this)" type="button"><i class="fa fa-plus"></i></button>
                     <br>
                 </div>
                 <div id="keyDiv"></div>
