--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -13,7 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/js/uikit-icons.min.js"></script>
 </head>
 
-<body>
+<body style="width: 100%; height: 100%">
 
 
 {% include "menu.html" %}
@@ -25,11 +25,6 @@
         .main_header {
             padding-left: 30%;
             font-size: 60px;
-        }
-        
-        body {
-            width: 100vw;
-            height: 100vh;
         }
         
         .margin {
