--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,17 +1,49 @@
-{%for product in products%}
-<figure class="snip1418">
-    <img src="{{ product.picture.url }}" alt="sample85" />
-    <div class="add-to-cart"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
-    <figcaption>
-        <h3>{{ product.product_name }}</h3>
-        <p>
-            <label>Наличие:     </label> {{ product.availability }}
-        </p>
-        <label>Цена:     </label>
-        <div class="price">
-            {{ product.cost }} ₽
+{% extends "base.html" %} {% block content %}
+
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>BizOpt</title>
+
+</head>
+
+<body style="width: 100%; height: 100%;">
+
+    <div class="uk-margin-medium uk-margin-large-left uk-margin-large-right" style="width: 90%; height: 90%">
+        <div class="uk-child-width-1-3@m " uk-grid>
+            {%for product in products%}
+            <div class="uk-text-center uk-border-rounded">
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top uk-padding-small">
+                        <img class="uk-border-rounded" style="width: 80%; " src="{{ product.picture.url }}" alt="">
+                    </div>
+                    <div class="uk-card-body uk-padding-small">
+
+                        <h3 class="uk-card-title uk-text-truncate">{{ product.product_name }}</h3>
+
+                        <div class="d-inline-block uk-margin-large-rigth uk-text-center">
+                            <p>срок изготовления:</p>
+                            <h4 class="uk-border-rounded uk-margin-small-top uk-padding-small"
+                                style="background: rgba(69, 101, 232, 0.34);">5
+                                дней</р4>
+                        </div>
+                        <div class="d-inline-block uk-margin-large-left uk-text-center">
+                            <p>стоимость:</p>
+                            <h4 class="uk-border-rounded uk-margin-small-top uk-padding-small"
+                                style="background: rgba(69, 101, 232, 0.34);"> {{ product.cost }} ₽</р4>
+                        </div>
+                        <a href='{{ product.id }}'
+                            class="uk-button uk-button-primary uk-button-large uk-width-1-1 uk-text-center uk-border-rounded uk-margin-top">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
-    </figcaption>
-    <a href='cardProduct/{{ product.id }}'></a>
-</figure>
-{% endfor %}
+    </div>
+
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
+
+{% endblock %}
