--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -346,7 +346,7 @@
                 <br>
                 <br>
                 <label>Дополнительная информация о товаре</label>
-                <button class="btn btn-outline-secondary" id="btnAddkey" onclick="showExtraInputs()" type="button"><i class="fa fa-arrow-down"></i></button>
+                <button class="btn btn-outline-secondary" onclick="showExtraInputs()" type="button"><i class="fa fa-arrow-down"></i></button>
                 <br>
                 <!--         IMAGE       -->
 
