--- a/bizopt/BO/templates/creators.html
+++ b/bizopt/BO/templates/creators.html
@@ -521,7 +521,7 @@
 <script>
     $(function () {
         var xhr = new XMLHttpRequest()
-        xhr.open('GET', 'baseProductCard ')
+        xhr.open('GET', 'baseResumeCard ')
         xhr.onload = function () {
 
             $('#content').html(xhr.response)
