add pictures upload in cardResume, creators-goods

--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -1,6 +1,6 @@
 <div class="row d-flex justify-content-center align-items-center">
     <div class="col-md-8">
-        <form id="regForm" method="POST" action="./">
+        <form id="regForm" method="POST" action="./" enctype="multipart/form-data">
             <h1 class="mb-5">Создать товар</h1>
 
             <!-- start of bloc 1 -->
@@ -353,7 +353,7 @@
                 <div class="row mt-3 mb-3">
                     <div class="col-md-8">
                         <label class="labels">Загрузить фото</label>
-                                   <input id="fileupload" class="form-control" name="profile_images" type="file" >
+                            <input id="fileupload" class="form-control" name="product_photos" type="file" />
                     </div>
                 </div>
 
