--- a/bizopt/BO/templates/cardResume.html
+++ b/bizopt/BO/templates/cardResume.html
@@ -11,7 +11,7 @@
         <div class="uk-card-header">
             <div class="uk-grid-small uk-flex-middle" uk-grid>
                 <div class="d-flex flex-row bd-highlight mb-3">
-                    <img class="uk-border-circle" width="150" height="150" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png">
+                    <img class="uk-border-circle" width="150" height="150" src="{{ profile.cover.url }}">
                     <div class="d-flex flex-column bd-highlight mb-3" style="margin-left: 10%">
                         <div class="d-flex flex-row bd-highlight mb-3">
                             <h3 class="uk-card-title uk-margin-remove-bottom">{{ profile.first_name }}</h3>
