--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -47,7 +47,7 @@
                         <button type="submit"
                             class="uk-button uk-button-primary uk-margin-right uk-border-rounded">Показать</button>
                         <button type="submit"
-                   main     class="uk-button uk-button-primary uk-margin-left uk-border-rounded">Отправить
+                        class="uk-button uk-button-primary uk-margin-left uk-border-rounded" onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Отправить
                             запрос</button>
                     </div>
                 </div>
