--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -3,7 +3,7 @@
     <div class="uk-navbar-left">
 
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#">
+            <li class="uk-active"><a href="/">
                     <h1>BIZOPT</h1>
                 </a></li>
             <!--            <li>-->
