--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -43,24 +43,24 @@
                         <label class="uk-form-label">
                             <h4>Город</h4>
                         </label>
-                        <input class="uk-input uk-border-rounded" name="phone" type="text" id="phone" placeholder="{{user.phone}}"
-                            value="{{user.phone}}">
+                        <input class="uk-input uk-border-rounded" name="city" type="number" id="city"
+                            placeholder="{{user.city}}" value="{{user.city}}">
                     </div>
 
                     <div class="uk-width-1-2@s">
                         <label class="uk-form-label">
                             <h4>Телефон</h4>
                         </label>
-                        <input class="uk-input uk-border-rounded" name="city" type="number" id="city" placeholder="{{user.city}}"
-                            value="{{user.city}}">
+                        <input class="uk-input uk-border-rounded" name="phone" type="number" id="phone"
+                            placeholder="{{user.phone}}" value="{{user.phone}}"">
                     </div>
 
-                    <div class="uk-width-1-1@s">
+                    <div class=" uk-width-1-1@s">
                         <label class="uk-form-label">
                             <h4>Почта</h4>
                         </label>
-                        <input class="uk-input uk-border-rounded" name="email" type="text" id="email" placeholder="{{user.email}}"
-                            value="{{user.email}}">
+                        <input class="uk-input uk-border-rounded" name="email" type="text" id="email"
+                            placeholder="{{user.email}}" value="{{user.email}}">
                     </div>
 
                     <div class="uk-width-1-1@s js-upload" uk-form-custom>
