--- a/bizopt/BO/templates/baseResumeCard.html
+++ b/bizopt/BO/templates/baseResumeCard.html
@@ -1,3 +1,13 @@
+{% extends "base.html" %} {% block content %}
+
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>BizOpt</title>
+
+</head>
+
+<body style="width: 100%; height: 100%;">
   {% for creator in creators %}
   <div class="uk-margin-auto uk-padding-remove uk-card uk-card-hover uk-card-body uk-width-1-2@m" href="#">
     <div class=" uk-padding-auto uk-card-header">
@@ -27,3 +37,9 @@
   </div>
 
   {% endfor %}
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
+
+{% endblock %}
